# reactive-streams-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TARGETS
include/: ReactiveStreams.h
scripts/: cppbuild  prepare_ubuntu_trusty.sh
test/: AllowanceSemaphoreTest.cpp  Examples.cpp  Mocks.h  OwnershipTest.cpp  SmartPointersTest.cpp
utilities/: SmartPointers.h
